# buddhabrot-renderer

./: Cargo.toml  README.md
benches/: buddha.rs
src/: color.rs  complex.rs  image.rs  images.rs  lib.rs  main.rs  sample.rs
