[package]
name = "buddhabrot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
exr = "1.72.0"
image = "0.25.1"
num_cpus = "1.16.0"
indicatif = "0.17.8"

[dev-dependencies]
criterion = "0.5.1"


[profile.release]
lto = true


[[bench]]
name = "buddha"
harness = false
